Fix alignment and z-index on new hero

--- a/src/nationalarchives/components/hero/hero.scss
+++ b/src/nationalarchives/components/hero/hero.scss
@@ -32,7 +32,7 @@ $over-overflow: $shift-overflow !default;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: flex-end;
   }
 
   &__caption {
@@ -275,12 +275,17 @@ $over-overflow: $shift-overflow !default;
       margin-right: 32px;
 
       overflow: hidden;
+      z-index: 5;
 
       bottom: spacing.space($over-overflow * -1);
 
       left: 50%;
       @include borders.rounded-border;
     }
+
+    &--split &__figure,
+    &--over &__figure {
+    justify-content: center;}
 
     &--shift &__content-inner,
     &--over &__image {
